# uav-img-selector

./: .gitignore  1_Load_Images.py  README.md  app.py  app_test.py  home.py  main.py  output.pstats  pyproject.toml  requirements.txt
demo/: DJI_0011.TIF  DJI_0021.TIF  DJI_0041.TIF  DJI_0061.TIF
pages/: 2_EXIF_Inspector.py  3_Select_Images.py  image_metadata.py  image_selector.py
uav_img_toolbox/classes/: ImageMetaData.py  UAVImages.py
