[tool.poetry]
name = "repl_nix_uav-img-selector"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
folium = "^0.14.0"
Pillow = "^9.5.0"
streamlit = "^1.22.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
